Fix div overlaping

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -694,6 +694,7 @@ nav a:focus {
 	bottom: 10px;
 	left: 50%;
 	opacity: 0;
+	z-index: -1;
 	transform: translateX(-50%);
 	transition: opacity 0.5s ease-in-out;
 }
